new proj/src/objects/GE_PRM_App_Structure__c.object
<CustomObject>
    <description>PRM Object</description>
    <fields>
        <fullName>Cloned_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GE_PRM_Cloned_Record__c</description>
        <label>Cloned Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Date_Established__c</fullName>
        <label>Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_KYC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KYC</label>
        <referenceTo>GE_PRM_KYC_Termination_Checklist__c</referenceTo>
        <relationshipName>App_Structure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Litigation_Case_Outcome__c</fullName>
        <label>Outcome Of Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Litigation_Date_Filed__c</fullName>
        <label>Date Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Litigation_Place_Filed__c</fullName>
        <label>Place Filed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Place_Established__c</fullName>
        <label>Place Established</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Access_to_SFDC__c</fullName>
        <inlineHelpText>Does this sales person have access to SFDC?</inlineHelpText>
        <label>Access to SFDC ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account plan name  linked to this  section</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipName>App_Structure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Activity__c</fullName>
        <description>Activity</description>
        <inlineHelpText>Activity</inlineHelpText>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment</label>
        <referenceTo>GE_PRM_Appointment__c</referenceTo>
        <relationshipName>App_Structure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Author__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_Address_1__c</fullName>
        <description>Address 1</description>
        <inlineHelpText>Address 1</inlineHelpText>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_Address_2__c</fullName>
        <description>Address 2</description>
        <inlineHelpText>Address 2</inlineHelpText>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_Address__c</fullName>
        <formula>GE_PRM_Billing_Address_1__c + &apos; &apos; + 
GE_PRM_Billing_Address_2__c + IF(GE_PRM_Billing_City__c =&apos;&apos;, &apos;&apos;, &apos; , &apos;) + 
GE_PRM_Billing_City__c + IF(GE_PRM_Billing_State_Province__c =&apos;&apos;, &apos;&apos;, &apos; , &apos;) + 
GE_PRM_Billing_State_Province__c + IF(TEXT(GE_PRM_Billing_Country__c) =&apos;&apos;, &apos;&apos;, &apos; , &apos;) + 
TEXT(GE_PRM_Billing_Country__c) + IF(GE_PRM_Billing_Postal_Code__c =&apos;&apos;, &apos;&apos;, &apos; - &apos;)+ GE_PRM_Billing_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_Postal_Code__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Billing_State_Province__c</fullName>
        <description>State/Province</description>
        <inlineHelpText>State/Province</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Branch_Office_Details_Page__c</fullName>
        <label>Branch Office Details Page</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Branch_Offices__c</fullName>
        <description>Branch Offices</description>
        <inlineHelpText>Branch Offices</inlineHelpText>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Business_Plan_Type__c</fullName>
        <inlineHelpText>Is this specific Sales person an channel partner Sales Employee or a Sub-representative ?</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Representative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CY_Total_Target__c</fullName>
        <formula>GE_PRM_Current_Year_Target_Sales_Q1__c + GE_PRM_Current_Year_Target_Sales_Q2__c + GE_PRM_Current_Year_Target_Sales_Q3__c + GE_PRM_Current_Year_Target_Sales_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated automatically. CY $ Total target assigned to this sales person for this year = CY $ Total Target = CY $ Target Orders Q1 + Q2 + Q3 + Q4</inlineHelpText>
        <label>CY $ Total Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_City_of_Registration__c</fullName>
        <description>City of Registration</description>
        <inlineHelpText>City of Registration</inlineHelpText>
        <label>City of Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Company_Name__c</fullName>
        <description>Company Name</description>
        <inlineHelpText>Company Name</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Complete_Address__c</fullName>
        <description>Complete Address</description>
        <inlineHelpText>Complete Address</inlineHelpText>
        <label>Complete Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Complete_Legal_Address__c</fullName>
        <formula>GE_PRM_Legal_Address_1__c +  &apos; &apos; +GE_PRM_Legal_Address_2__c + &apos;, &apos;+ 	GE_PRM_Legal_City__c + &apos;, &apos;+ GE_PRM_Legal_State_Province__c + &apos;, &apos;+ 	GE_PRM_Legal_Postal_Code__c + &apos;, &apos;+ 	TEXT(GE_PRM_Legal_Country__c)</formula>
        <label>Complete Legal Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Contact__c</fullName>
        <description>Contact</description>
        <inlineHelpText>Contact</inlineHelpText>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Countries__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Country_of_Nationality__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Country of Nationality</description>
        <inlineHelpText>Country of Nationality</inlineHelpText>
        <label>Country of Nationality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Coverage_Area__c</fullName>
        <inlineHelpText>Area coverage by this specific sales person</inlineHelpText>
        <label>Coverage Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Current_Year_Est_Sales__c</fullName>
        <inlineHelpText>What is the estimated volume this sales person could achieve this year ?</inlineHelpText>
        <label>CY $ Est Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Current_Year_Target_Sales_Q1__c</fullName>
        <inlineHelpText>What is the target assigned to this sales person in Q1 this year</inlineHelpText>
        <label>CY $Target Orders Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Current_Year_Target_Sales_Q2__c</fullName>
        <inlineHelpText>What is the target assigned to this sales person in Q2 this year</inlineHelpText>
        <label>CY $Target Orders Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Current_Year_Target_Sales_Q3__c</fullName>
        <inlineHelpText>What is the target assigned to this sales person in Q3 this year</inlineHelpText>
        <label>CY $Target Orders Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Customers__c</fullName>
        <label>Customers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete</description>
        <inlineHelpText>Delete</inlineHelpText>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_HQ_Address1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as HQ Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_HQ_Address2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as HQ Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Industries__c</fullName>
        <label>Industries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_KYC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KYC</label>
        <referenceTo>GE_PRM_KYC_Termination_Checklist__c</referenceTo>
        <relationshipName>Sales_Team_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Address_1__c</fullName>
        <description>Address 1</description>
        <inlineHelpText>Address 1</inlineHelpText>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Address_2__c</fullName>
        <description>Address 2</description>
        <inlineHelpText>Address 2</inlineHelpText>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Address__c</fullName>
        <formula>GE_PRM_Legal_Address_1__c + &apos; &apos; +
GE_PRM_Legal_Address_2__c + IF(GE_PRM_Legal_City__c =&apos;&apos;, &apos;&apos;, &apos; , &apos;) +
GE_PRM_Legal_City__c + IF(GE_PRM_Legal_State_Province__c =&apos;&apos;, &apos;&apos;, &apos; , &apos;) +
GE_PRM_Legal_State_Province__c + IF(TEXT(GE_PRM_Legal_Country__c) =&apos;&apos;, &apos;&apos;, &apos; , &apos;) +
TEXT(GE_PRM_Legal_Country__c) + IF(GE_PRM_Legal_Postal_Code__c =&apos;&apos;, &apos;&apos;, &apos; - &apos;)+ GE_PRM_Legal_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_Postal_Code__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Legal_State_Province__c</fullName>
        <description>State/Province</description>
        <inlineHelpText>State/Province</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Location__c</fullName>
        <description>Location</description>
        <inlineHelpText>Location</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Nationality__c</fullName>
        <description>Nationality</description>
        <inlineHelpText>Nationality</inlineHelpText>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Notes_Questions_Etc__c</fullName>
        <label>Notes, Questions, Etc.,</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Address_1__c</fullName>
        <description>Address 1</description>
        <inlineHelpText>Address 1</inlineHelpText>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Address_2__c</fullName>
        <description>Address 2</description>
        <inlineHelpText>Address 2</inlineHelpText>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Address__c</fullName>
        <formula>GE_PRM_Ordering_Address_1__c + &apos; &apos; + 
GE_PRM_Ordering_Address_2__c + IF(GE_PRM_Ordering_City__c =&apos;&apos;, &apos;&apos;, &apos; , &apos;) + 
GE_PRM_Ordering_City__c + IF(GE_PRM_Ordering_State_Province__c =&apos;&apos;, &apos;&apos;, &apos; , &apos;) + 
GE_PRM_Ordering_State_Province__c + IF(TEXT(GE_PRM_Ordering_Country__c) =&apos;&apos;, &apos;&apos;, &apos; , &apos;) + 
TEXT(GE_PRM_Ordering_Country__c) + IF(GE_PRM_Ordering_Postal_Code__c =&apos;&apos;, &apos;&apos;, &apos; - &apos;)+ GE_PRM_Ordering_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordering Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_Postal_Code__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ordering_State_Province__c</fullName>
        <description>State/Province</description>
        <inlineHelpText>State/Province</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ownership__c</fullName>
        <label>% Ownership</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Previous_Year_Total_Target__c</fullName>
        <inlineHelpText>What % of the Total Target has been generated by this sales person last year ?</inlineHelpText>
        <label>PY % Total Target</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Products_trained_on__c</fullName>
        <inlineHelpText>What are the products this sales person has been trained on ?</inlineHelpText>
        <label>Products Trained On ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Recommendation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommendation</label>
        <referenceTo>GE_PRM_Recommendation__c</referenceTo>
        <relationshipName>Sales_Team_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>